--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "axios": "^0.15.3",
     "body-parser": "^1.15.2",
     "consolidate": "^0.14.5",
+    "cookie-parser": "^1.4.3",
     "dateformat": "^2.0.0",
     "express": "^4.14.0",
     "jade": "^1.11.0",
     "mongodb": "^2.2.16",
     "multer": "^1.2.1",
+    "pug": "^0.1.0",
     "stylus": "^0.54.5",
     "unix-timestamp": "^0.2.0"
   },
